added more test cases for java doc snippet highlight and replace mark up tags